added viewprofile entrypoint
