# service/service.go
@@ -7,6 +7,8 @@ import (
 
 type ServiceInfoHandler interface {
 	Registration(db *sql.DB, userInfo *models.SignUp) error
+	UserLogin(db *sql.DB, email string, password string) (string, error)
+	ViewProfile(db *sql.DB, email string) (*models.Profile, error)
 }
 
 type service struct{}
