# swagger.yml
@@ -11,13 +11,19 @@ consumes:
 produces:
   - "application/json"
 
+securityDefinitions:
+  Bearer:
+    type: apiKey
+    name: Authorization
+    in: header
+
 paths:
   /signup:
     post:
-      description: 'To register a new user'
+      description: "To register a new user"
       operationId: "signup"
       tags:
-      - "signup"
+        - "signup"
       parameters:
         - in: 'body'
           name: 'signup'
@@ -40,6 +46,58 @@ paths:
           schema:
             type: string
           description: Server error
+
+  /login:
+    post:
+      description: 'To authenticate user with token'
+      operationId: "login"
+      tags:
+        - "login"
+      parameters:
+        - in: 'body'
+          name: 'login'
+          required: true
+          description: "login model"
+          schema:
+            $ref: "#/definitions/Login"
+      responses:
+        200:
+          description: Successful login
+          schema:
+            $ref: '#/definitions/LoginSuccess'
+        400:
+          description: Bad Request
+        404:
+          schema:
+            type: string
+          description: User not found
+        500:
+          schema:
+            type: string
+          description: Server error
+
+  /user/profile:
+    get:
+      description: "To show user details"
+      operationId: "profile"
+      tags:
+        - "User"
+      security:
+        - Bearer: []
+      responses:
+        200:
+          description: "Success response when item is added successfully"
+          schema:
+            $ref: "#/definitions/Profile"
+        400:
+          description: Bad Request
+        404:
+          description: User not found
+        500:
+          schema:
+            type: string
+          description: Server error
+
 definitions:
   SignUp:
     type: object
@@ -65,4 +123,34 @@ definitions:
       success:
         type: boolean
       message:
+        type: string
+  Login:
+    type: object
+    required: [email,password]
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+  LoginSuccess:
+    type: object
+    properties:
+      success:
+        type: boolean
+      token:
+        type: string
+  Profile:
+    type: object
+    properties:
+      first_name:
+        type: string
+      middle_name:
+        type: string
+      last_name:
+        type: string
+      email:
+        type: string
+      username:
+        type: string
+      profile_image:
         type: string
